# yolov8n_lite_arm_cpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  demo.cc  yolov8n_lite_arm_cpu  yolov8n_lite_arm_cpu.cc
cmake/modules/: FindJsonCpp.cmake
mqtt_publisher/: CMakeLists.txt  esp32mqtt.c  mqtt_publisher  mqtt_publisher.cpp
